@@ -31,6 +31,13 @@
       client side scripts, such as jQuery validation.
     
     - Experimental new roles() form method.
+    
+    - form methods start(), end() now respect render_method - no longer
+      force use of tt templates.
+    
+    - Element::Number no longer generates `type="number"`, as the output
+      was neither valid xhtml or html5.
+      http://code.google.com/p/html-formfu/issues/detail?id=66
 
 0.09010 2012-10-05
 
